--- a/view/log_form.xml
+++ b/view/log_form.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0"?>
 <!-- This file is part of log_action Tryton module. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form col="6">
+<form col="3">
     <label name="date"/>
-    <field name="date"/>
+    <field name="date" widget="date"/>
+    <field name="date" widget="time"/>
     <label name="action"/>
-    <field name="action"/>
+    <field name="action" colspan="2"/>
     <label name="user"/>
-    <field name="user"/>
+    <field name="user" colspan="2"/>
 </form>
