--- a/view/log_form.xml
+++ b/view/log_form.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0"?>
 <!-- This file is part of log_action Tryton module. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form col="3">
+<form col="6">
     <label name="date"/>
     <field name="date" widget="date"/>
+    <label string="Time"/>
     <field name="date" widget="time"/>
-    <label name="action"/>
-    <field name="action" colspan="2"/>
     <label name="user"/>
-    <field name="user" colspan="2"/>
+    <field name="user"/>
+    <label name="action"/>
+    <field name="action" colspan="5"/>
 </form>
