--- a/view/log_form.xml
+++ b/view/log_form.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
-<!-- This file is part of log_action Tryton module. The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
+<!-- This file is part of log_action module.
+The COPYRIGHT file at the top level of this repository contains
+the full copyright notices and license terms. -->
 <form col="6">
     <label name="date"/>
     <field name="date" widget="date"/>
@@ -8,6 +9,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="date" widget="time"/>
     <label name="user"/>
     <field name="user"/>
-    <label name="action"/>
-    <field name="action" colspan="5"/>
+    <label name="message"/>
+    <field name="message" colspan="5"/>
 </form>
