--- a/view/log_tree.xml
+++ b/view/log_tree.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0"?>
-<!-- This file is part of log_action Tryton module. The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
+<!-- This file is part of log_action module.
+The COPYRIGHT file at the top level of this repository contains
+the full copyright notices and license terms. -->
 <tree>
     <field name="date" widget="date"/>
-    <field name="action"/>
+    <field name="message"/>
     <field name="user"/>
     <field name="date" widget="time" string="Time"/>
 </tree>
