--- a/view/log_tree.xml
+++ b/view/log_tree.xml
@@ -3,8 +3,8 @@
 The COPYRIGHT file at the top level of this repository contains
 the full copyright notices and license terms. -->
 <tree>
-    <field name="date" widget="date"/>
-    <field name="message"/>
-    <field name="user"/>
+    <field name="date" widget="date" string="Date"/>
+    <field name="message" string="Message"/>
+    <field name="user" string="User"/>
     <field name="date" widget="time" string="Time"/>
 </tree>
